tra debug getAnimalByPArams, and debug deleteLocationFromAnimal