@@ -5,14 +5,14 @@ import ru.alex.braim.utils.interfaces.Identifiable;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Component
 public class ListUtils {
     public static List<Long> toLongList(List<? extends Identifiable> chippingInfoList) {
+
         return chippingInfoList.stream()
                 .map(Identifiable::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static<T extends Identifiable> int indexOfById(List<T> a, Long id)
